# sample-wids

./: .gitignore  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
docs/lab-1/: readme.md
docs/lab-2/: readme.md
docs/pre-work/: readme.md
lab-1/readme/: index.html
lab-2/readme/: index.html
lab-3/readme/: index.html
lab-4/readme/: index.html
notebooks/: RAG_with_Langchain.ipynb  Summarize.ipynb  Time_Series_Getting_Started.ipynb
pre-work/readme/: index.html
search/: search_index.json
