[project]
name = "sample-wids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.28.4",
    "kaleido==0.2.1",
    "granite-tsfm[notebooks]==0.2.22",
    "ibm-granite-community-utils",
    "ipywidgets>=8.1.5",
    "jupyter-black>=0.4.0",
    "jupyterlab>=4.4.0",
    "langchain-community>=0.3.20",
    "langchain-huggingface>=0.1.2",
    "langchain-milvus>=0.1.9",
    "langchain-ollama>=0.3.0",
    "matplotlib>=3.10.1",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.1.0",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-material>=9.6.11",
    "mkdocs-material-extensions>=1.3.1",
    "replicate>=1.0.4",
    "transformers>=4.42.4",
    "wget>=3.2",
]

[tool.uv.sources]
ibm-granite-community-utils = { git = "https://github.com/ibm-granite-community/utils" }
